<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="hms_abort">Stop</string>
    <string name="hms_abort_message">Stop downloading?</string>
    <string name="hms_bindfaildlg_message">%1$s is unable to use Huawei Mobile Services. Please launch Phone Manager or go to Settings, enable all permissions for %2$s (including auto-launch and secondary launch), and try again.</string>
    <string name="hms_cancel">Cancel</string>
    <string name="hms_check_failure">Failed to check for updates.</string>
    <string name="hms_check_no_update">You are already using the latest version.</string>
    <string name="hms_checking">Checking for updates…</string>
    <string name="hms_confirm">OK</string>
    <string name="hms_download_failure">Failed to download Huawei Mobile Services package.</string>
    <string name="hms_download_no_space">Not enough free space. Download cannot be completed.</string>
    <string name="hms_download_retry">Download failed. Try again?</string>
    <string name="hms_downloading">"Downloading Huawei Mobile Services
progress: %d%%"</string>
    <string name="hms_downloading_new">Downloading HMS</string>
    <string name="hms_install">Install</string>
    <string name="hms_install_message">Huawei Mobile Services must be installed to use this feature. Install?</string>
    <string name="hms_retry">Retry</string>
    <string name="hms_update">Update</string>
    <string name="hms_update_message">Update to the latest version of Huawei Mobile Services to use this feature. Update now?</string>
    <string name="hms_update_message_new">"This service requires the latest version of the following app:

%1$s"</string>
    <string name="hms_update_title">Huawei Mobile Services</string>
    <string name="tw__allow_btn_txt">Allow</string>
    <string name="tw__composer_hint">"What's Happening?"</string>
    <string name="tw__install">Install</string>
    <string name="tw__login_btn_txt">Log in with Twitter</string>
    <string name="tw__max_tweet_chars">140</string>
    <string name="tw__not_now_btn_txt">Not now</string>
    <string name="tw__post_tweet">Tweet</string>
    <string name="tw__share_email_desc">Allow %1$s to access the email address associated with your Twitter account @%2$s so that %1$s can use it according to its privacy policy. For example, %1$s could send you updates and other information at that address.</string>
    <string name="tw__share_email_title">Share your email address</string>
    <string name="a_reply_to_b">${0} replied ${1}</string>
    <string name="about_us">About Us</string>
    <string name="about_us_copyright">Copyright©2018 Yi-Xiao Science and Technology Development Co., Ltd.</string>
    <string name="admire_kwaicoin_record">Reward Records</string>
    <string name="avatar">Profile Picture</string>
    <string name="bind_phone_for_friends">Add your phone number to let your friends find you.</string>
    <string name="change_phone">Change</string>
    <string name="charity_entry_title">Kwai Charity Initiative</string>
    <string name="charity_joined">Joined</string>
    <string name="contacts_read_allow">Allow access to Contacts</string>
    <string name="empty_prompt">No contents</string>
    <string name="explore_friend_contact_permission_tip">"What's fun about Kwai is following friends and viewing their posts. Allow Kwai to access your Contacts to find your friends on Kwai."</string>
    <string name="explore_friend_find_follow_contact">Search and follow Contacts friends</string>
    <string name="followed">Following</string>
    <string name="gifts_given">Gifts sent</string>
    <string name="go_back">Back</string>
    <string name="kwai_coin">Kwaicoin</string>
    <string name="live_audiences">Viewers</string>
    <string name="live_follow">You like it? Follow me!</string>
    <string name="live_likes">Likes</string>
    <string name="live_time">Live Time</string>
    <string name="make_follow">Follow</string>
    <string name="my_bill">My Bill</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone Number</string>
    <string name="private_location_prompt">When location is hidden, your posts will not be shown in Nearby.</string>
    <string name="received_gifts">Gifts received</string>
    <string name="recharge_kwai_coin">Top up Kwaicoins</string>
    <string name="red_packet_history">View My Packets</string>
    <string name="social_privacy_opened_tip">"Privacy protection is enabled. You won't be recommended to your Contacts friends."</string>
    <string name="unbind">Add</string>
    <string name="unbind_phone">Phone Number</string>
    <string name="view_live_owner_profile">Profile</string>
    <string name="withdraw_amount">Withdrawable</string>
    <string name="yellow_diamond">Yellow Diamond</string>
    <string name="yellow_diamond_to_kwai_coin">Exchange Yellow Diamonds to Kwai coins</string>
    <string name="yellow_diamond_withdraw">Withdraw RMB</string>
    <string name="yuan">RMB</string>
    <string name="coupon_withdraw_deposit">活动红包提现</string>
</resources>