<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/background_light" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/bind_phone_layout" style="@style/Theme.Widget.Setting.Row">
        <ImageView android:id="@id/bind_phone_login_image" android:background="@android:color/transparent" android:src="@drawable/icon_phone" android:layout_centerVertical="true" android:contentDescription="@string/phone_number" style="@style/Theme.Widget.Setting.PlatformIcon" />
        <TextView android:textColor="@color/setting_bind_color" android:id="@id/entry_text" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unbind_phone" android:drawablePadding="10.0dip" android:layout_toRightOf="@id/bind_phone_login_image" android:layout_centerVertical="true" style="@style/Theme.Widget.Setting.ItemText" />
        <ToggleButton android:textColor="@color/text_color5" android:id="@id/bind_phone_button" android:background="@drawable/button11" android:textOn="@string/unbind" android:textOff="@string/change_phone" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="@style/Theme.Widget.Setting.BindButton" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/bind_phone_tips" android:background="@color/surface_color7_normal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_12" android:textColor="@color/text_grey_color" android:id="@id/bind_phone_tips_text" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_default" android:layout_marginTop="@dimen/margin_default" android:layout_marginRight="@dimen/margin_default" android:layout_marginBottom="@dimen/margin_default" android:text="@string/private_location_prompt" />
    </LinearLayout>
    <View android:id="@id/entry_splitter" android:layout_width="fill_parent" android:layout_height="wrap_content" />
</LinearLayout>