<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:background="@drawable/login_bg_cover" android:layout_width="fill_parent" android:layout_height="150.0dip" android:layout_marginBottom="10.0dip">
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/kwai_coin_container" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <com.yxcorp.gifshow.widget.SizeAdjustableTextView android:textSize="12.0dip" android:textColor="@android:color/white" android:gravity="center" android:id="@id/kwai_coin_text_view" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginTop="30.0dip" android:text="@string/kwai_coin" app:textSizeAdjustable="true" />
                    <TextView android:textSize="15.0sp" android:textColor="@android:color/white" android:id="@id/kwai_coin_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:includeFontPadding="false" />
                </LinearLayout>
                <View android:layout_gravity="center_vertical" android:id="@id/yellow_diamond_divider" android:background="@color/divider_white" android:layout_width="0.5dip" android:layout_height="60.0dip" />
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/yellow_diamond_container" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <com.yxcorp.gifshow.widget.SizeAdjustableTextView android:textSize="12.0dip" android:textColor="@android:color/white" android:gravity="center" android:id="@id/yellow_diamond_text_view" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginTop="30.0dip" android:text="@string/yellow_diamond" android:singleLine="true" app:textSizeAdjustable="true" />
                    <TextView android:textSize="15.0sp" android:textColor="@android:color/white" android:ellipsize="end" android:id="@id/yellow_diamond_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:singleLine="true" android:includeFontPadding="false" />
                </LinearLayout>
                <View android:layout_gravity="center_vertical" android:id="@id/withdraw_amount_divider" android:background="@color/divider_white" android:layout_width="0.5dip" android:layout_height="60.0dip" />
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/withdraw_amount_container" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <com.yxcorp.gifshow.widget.SizeAdjustableTextView android:textSize="12.0dip" android:textColor="@android:color/white" android:gravity="center" android:id="@id/withdraw_amount_text_view" android:layout_width="wrap_content" android:layout_height="30.0dip" android:layout_marginTop="30.0dip" android:text="@string/withdraw_amount" android:singleLine="true" app:textSizeAdjustable="true" />
                    <RelativeLayout android:gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
                        <TextView android:textSize="15.0sp" android:textColor="@color/text_default_color" android:ellipsize="end" android:layout_gravity="center_horizontal" android:id="@id/withdraw_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:includeFontPadding="false" />
                        <TextView android:textSize="10.0dip" android:textColor="@color/text_default_color" android:gravity="bottom" android:paddingBottom="1.5dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yuan" android:includeFontPadding="false" android:layout_toRightOf="@id/withdraw_amount" android:layout_alignTop="@id/withdraw_amount" android:layout_alignBottom="@id/withdraw_amount" android:layout_centerVertical="true" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@color/background_light" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/yellow_diamond_withdraw_button" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <Button android:clickable="false" android:text="@string/yellow_diamond_withdraw" android:drawableLeft="@drawable/wallet_icon_yellowdiamond_normal" style="@style/Theme.Widget.Payment.Button.RightArrow" />
                    <View android:layout_marginLeft="50.0dip" style="@style/Theme.Widget.DefaultDividerVertical" />
                </LinearLayout>
                <Button android:id="@id/recharge_kwai_coin_button" android:text="@string/recharge_kwai_coin" android:drawableLeft="@drawable/wallet_icon_kcoin_normal" style="@style/Theme.Widget.Payment.Button.RightArrow" />
                <LinearLayout android:orientation="vertical" android:id="@id/withdraw_redpack_button" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <View android:layout_marginLeft="50.0dip" style="@style/Theme.Widget.DefaultDividerVertical" />
                    <Button android:text="@string/coupon_withdraw_deposit" android:drawableLeft="@drawable/nav_btn_redpocket_normal" style="@style/Theme.Widget.Payment.Button.RightArrow" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/yellow_diamond_to_kwai_coin_button" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <View android:layout_marginLeft="50.0dip" style="@style/Theme.Widget.DefaultDividerVertical" />
                    <Button android:text="@string/yellow_diamond_to_kwai_coin" android:drawableLeft="@drawable/wallet_icon_greendiamond_exchange_normal" style="@style/Theme.Widget.Payment.Button.RightArrow" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@color/background_light" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <Button android:id="@id/my_bill_button" android:text="@string/my_bill" android:drawableLeft="@drawable/wallet_icon_recording_normal" style="@style/Theme.Widget.Payment.Button.RightArrow" />
                <View android:layout_marginLeft="50.0dip" style="@style/Theme.Widget.DefaultDividerVertical" />
                <Button android:id="@id/profit_analysis_button" android:text="@string/received_gifts" android:drawableLeft="@drawable/wallet_icon_received_gift_normal" style="@style/Theme.Widget.Payment.Button.RightArrow" />
                <View android:layout_marginLeft="50.0dip" style="@style/Theme.Widget.DefaultDividerVertical" />
                <Button android:id="@id/gifts_given_button" android:text="@string/gifts_given" android:drawableLeft="@drawable/wallet_icon_send_gift_normal" style="@style/Theme.Widget.Payment.Button.RightArrow" />
                <View android:layout_marginLeft="50.0dip" style="@style/Theme.Widget.DefaultDividerVertical" />
                <Button android:id="@id/red_packet_list_button" android:text="@string/red_packet_history" android:drawableLeft="@drawable/setting_icon_redpacket_normal" style="@style/Theme.Widget.Payment.Button.RightArrow" />
                <LinearLayout android:orientation="vertical" android:id="@id/reward_record_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <View android:layout_marginLeft="50.0dip" style="@style/Theme.Widget.DefaultDividerVertical" />
                    <Button android:id="@id/reward_record_button" android:text="@string/admire_kwaicoin_record" android:drawableLeft="@drawable/setting_icon_money_normal" style="@style/Theme.Widget.Payment.Button.RightArrow" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/charity_gift_layout" android:background="@color/background_light" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <Button android:id="@id/charity_gift_button" android:paddingLeft="@dimen/margin_default" android:layout_width="wrap_content" android:text="@string/charity_entry_title" android:drawableLeft="@drawable/wallet_icon_recording_normal" android:drawablePadding="10.0dip" style="@style/Theme.Widget.Payment.Row" />
                <TextView android:gravity="right" android:id="@id/charity_gift_joined_label" android:paddingRight="@dimen/margin_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/charity_joined" android:drawableRight="@drawable/button_arrow_right" android:drawablePadding="@dimen/margin_default" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>