<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/background" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/kwai_title_guide" />
    <include android:id="@id/title_divider" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_below="@id/title_root" layout="@layout/line_divider_grey" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/bind_tip_layout" android:background="#ff81d7ff" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="40.0dip" android:layout_below="@id/title_divider" android:onClick="onClick">
        <ImageView android:layout_width="21.0dip" android:layout_height="21.0dip" android:src="@drawable/contacts_icon_smile" />
        <TextView android:textSize="@dimen/text_size_14" android:textColor="#ffffffff" android:ellipsize="end" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/bind_phone_for_friends" android:maxLines="2" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/text_size_14" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unbind" android:drawableRight="@drawable/contacts_icon_arrow_normal" android:drawablePadding="10.0dip" />
    </LinearLayout>
    <RelativeLayout android:id="@id/allow_read_contact_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:id="@id/empty_face_im" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/login_empty_address" android:layout_centerHorizontal="true" android:contentDescription="@string/empty_prompt" />
        <TextView android:textSize="@dimen/text_size_18" android:textColor="@color/list_item_black" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/empty_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_large" android:text="@string/explore_friend_find_follow_contact" android:layout_below="@id/empty_face_im" />
        <TextView android:textSize="@dimen/text_size_14" android:textColor="@color/text_hint_black_color" android:id="@id/prompt_tv" android:layout_width="294.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_default" android:text="@string/explore_friend_contact_permission_tip" android:layout_below="@id/empty_title" android:layout_centerHorizontal="true" />
        <Button android:textSize="@dimen/text_size_16" android:textColor="@color/text_default_color" android:id="@id/operation_btn" android:background="@drawable/button2" android:layout_width="210.0dip" android:layout_height="40.0dip" android:layout_marginTop="25.0dip" android:text="@string/contacts_read_allow" android:layout_below="@id/prompt_tv" android:layout_centerHorizontal="true" android:onClick="onClick" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/list_container" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/bind_tip_layout">
        <TextView android:id="@id/contacts_tip" android:visibility="gone" android:text="@string/social_privacy_opened_tip" android:drawableLeft="@drawable/setting_icon_notrecommended_normal" android:drawableRight="@null" style="@style/Theme.Widget.Setting.Button.RightArrow" />
        <FrameLayout android:id="@id/content_fragment" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </LinearLayout>
</RelativeLayout>